--- a/cw.html
+++ b/cw.html
@@ -60,7 +60,7 @@
                     </li>
                     
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="lop.htmlt">Contact</a>
                     </li>
                 </ul>
             </div>
